# poretransformer

./: .gitignore  LICENSE  README.md  pyproject.toml  req-dl.txt  req-pnm-new.txt  req-pnm.txt  setup.py
lpu3dnet/: README.md  config.yaml  init_yaml.py  lpu_vqgan.yaml  main.py  quick_check.ipynb
lpu3dnet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lpu3dnet/config/: dataset.yaml  transformer.yaml  vqgan.yaml
lpu3dnet/core/: lpu3dnet_main.py
lpu3dnet/data/: 3d_visual.ipynb  check_rec.ipynb  explore_data.ipynb  img_big_proc.ipynb  img_crop_small.py  img_enc_cond.py  img_enc_cond_kabs.py  img_proc.ipynb  validate_funcs.py
lpu3dnet/eval/: assemble_visual_transformer.ipynb  check_history.py  codebook_perturb.ipynb  compare_kabs.py  compare_phys.py  explore_codebook.ipynb  phys_check_assemble.ipynb  quick_check.ipynb  test_vqvae.py  transformer_explore.ipynb  transformer_quick_check.ipynb  transformer_train_history.ipynb  vqvae_check.ipynb
lpu3dnet/finetune/: cluster_z.py  kmeans_val.ipynb  latent_vec_generate.py
lpu3dnet/frame/: pretrained_architectures.py  pretrained_models.py  test.py  transformer.py  vqgan.py  vqgan_comp.py
lpu3dnet/inference/: block_generation.py  block_generation_singlecond.py
lpu3dnet/modules/: codebook.py  codebook_collection.py  codebook_init.py  components.py  decoder.py  discriminator.py  encoder.py  gpt_test.py  minigpt.py  nanogpt.py  test.py
lpu3dnet/post_process/: analyze_assemble_img.ipynb  analyze_phys_single.ipynb  analyze_sim_results.ipynb  assemble_imgs.py  compare_original_improve.ipynb  compare_simulation.ipynb  (+18 more)
(+261 files in other folders)
